<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    android:background="@drawable/background_chat"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:ignore="Overdraw">

    <android.support.v7.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="6dp"
        android:theme="@style/ActionBar"/>

    <ListView
        android:id="@+id/list_of_messages"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        android:paddingRight="6dp"
        android:paddingEnd="6dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        android:listSelector="@android:color/transparent" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">


            <EditText
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_weight="8.5"
                android:paddingRight="2dp"
                android:paddingEnd="2dp"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_height="match_parent"
                android:hint="@string/input_message"
                android:maxLines="5"
                android:maxLength="512"
                android:id="@+id/input"
                android:textColorHint="@color/gray"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:clickable="true"
                android:id="@+id/send_message_button"
                android:src="@drawable/ic_send_white_36dp"
                app:backgroundTint="@color/send_message_button_color"
                app:fabSize="mini"/>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>