...
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/open_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chat_36dp"
        app:backgroundTint="@color/blue"
        app:fabSize="normal"
        android:layout_alignParentRight="true"
...
