<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/locationToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ActionBar">

        <ImageButton
            android:src="@drawable/ic_done_white_36dp"
            android:contentDescription="@string/done_location_description"
            android:id="@+id/location_done_button_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@null"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            tools:ignore="RtlSymmetry" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_name_layout"
        android:paddingTop="12dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_enter_name"
            android:id="@+id/locationName"
            android:maxLength="18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="7dp"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/location_enter_address_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choose_location"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView
        android:text="@string/location_gps_coordinates_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="normal|italic"
        android:textAlignment="center" />

</LinearLayout>