...
    <string name="custom_text">Custom</string>

    <!-- Unfilled task information messages-->
    <string name="unfilled_param">"—"</string>

    <!-- Preference key -->
    <string name="application_prefs_name">ch.epfl.sweng.TaskIt</string>
    <string name="new_user">FIRST_USER_LOGIN</string>
    <string name="first_launch">FIRST_LAUNCH</string>

    <string name="unfilled_duration">Not decided yet</string>
    <string name="unfilled_location">Not decided yet</string>


...
